--- a/index.html
+++ b/index.html
@@ -15,31 +15,9 @@
         </head>
     
         <div class="board">
-            <div class="polaroid">
-                <img src="./img/Frecciarossa..jpg" alt="Foto">
-                <p>Accusamus Beatae Ad Facilis Cum Similique Qui Sunt</p>
-            </div>
-            <div class="polaroid">
-                <img src="./img/Frecciarossa..jpg" alt="Foto">
-                <p>Reprehenderit Est Deserunt Velit Ipsam</p>
-            </div>
-            <div class="polaroid">
-                <img src="./img/Frecciarossa..jpg" alt="Foto">
-                <p>Officia Porro Iure Quia Iusto Qui Ipsa Ut Modi</p>
-            </div>
-            <div class="polaroid">
-                <img src="./img/Frecciarossa..jpg" alt="Foto">
-                <p>Culpa Odio Esse Rerum Omnis Laboriosam Voluptate Repudiandae</p>
-            </div>
-            <div class="polaroid">
-                <img src="./img/Frecciarossa..jpg" alt="Foto">
-                <p>Natus Nisi Omnis Corporis Facere Molestiae Rerum In</p>
-            </div>
-            <div class="polaroid">
-                <img src="./img/Frecciarossa..jpg" alt="Foto">
-                <p>Accusamus Ea Aliquid Et Amet Sequi Nemo</p>
-            </div>
+
         </div>
 
+        <script src="main.js"></script>
     </body>
 </html>
